--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DsaVisualizer",
-  "homepage": "https://Divyanshi01615.github.io/DsaVisualizer/",
+  "homepage": "https://Divyanshi01615.github.io/DsaVisualizer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,9 @@
     "build": "vite build",
     "start": "vite preview",
     "lint": "eslint .",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "cross-env DEPLOY_ENV=GH_PAGES npm run build",
+    "deploy": "gh-pages -d dist",
+    "deploy:vercel": "npm run build && vercel --prod"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -27,7 +28,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.0",
-    "react-router-dom": "^7.3.0",
+    "react-router": "^6.4.0",
+    "react-router-dom": "^6.4.0",
     "tailwind-merge": "^2.2.1",
     "vite": "^6.2.1",
     "zod": "^3.22.4"
@@ -40,6 +42,7 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.18",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.35",
